res/res_calendar_icalendar.c
@@ -78,6 +78,7 @@ static void icalendar_destructor(void *obj)
 	if (pvt->data) {
 		icalcomponent_free(pvt->data);
 	}
+	ne_uri_free(&pvt->uri);
 	ast_string_field_free_memory(pvt);
 
 	ao2_callback(pvt->events, OBJ_UNLINK | OBJ_NODATA | OBJ_MULTIPLE, NULL, NULL);
